--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "license": "MIT",
   "dependencies": {
     "angular": "^1.6.4",
-    "express": "^4.15.2"
+    "body-parser": "^1.17.2",
+    "express": "^4.15.2",
+    "json-stringify": "^1.0.0",
+    "request": "^2.81.0"
   },
   "scripts": {
     "start": "node index.js"
